syntax = "proto3";

option csharp_namespace = "GrpcExample.Protos";

import "google/protobuf/timestamp.proto";

package unary;

service Unary {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
